--- a/verificacao-cpf/style_verifica.css
+++ b/verificacao-cpf/style_verifica.css
@@ -4,18 +4,44 @@
 
 body{
     display: grid;
-    background-color: aqua;
-    grid-template-columns: repeat(3,1fr);
+    text-align: center;
+    grid-template-columns: repeat(3, 1fr);
+    font-family: 'poppins' ,'display';
+    background-image:linear-gradient(to right, #da54ec 0, #c04bee 16.67%, #a042f0 33.33%, #783cf2 50%, #3739f3 66.67%, #0038f5 83.33%, #003af6 100%);
+    align-items: center;
+    height: 100vh;
+    font-size: 20px;
 }
 form{
     grid-column-start: 1;
     grid-column-end: 4;
-    background-color: white;
-    text-align: center;
-    border-radius: 10px;
+    border-radius: 20px;
     margin: 10px;
-    padding: 10px;
+    padding: 20px;
+    background-color: white;
+}
+input{
+    height: 30px;
+    border-radius: 10px;
+    margin: 5px;
+    border: "2px solid black";;
+}
+.btn{
+    text-align: center;
+    margin: 8px;
+    font-size: 18px;
+    color: white;
+    height: 30px;
+    border-radius: 10px;
+    background-color:#a042f0;
+    width: 60%;
 }
 
 @media only screen and (min-width: 600px) {
+    form{
+        font-size: 20px;
+        grid-column-start: 2;
+        grid-column-end: 3;
+    }
+
 }
